Letter-Spacing Solved

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -30,7 +30,7 @@ footer {
     display: flex;
     flex-direction: column;
     font-size: 24px;
-    letter-spacing: 99%;
+    letter-spacing: -0.01em;
     color: inherit;
     text-decoration: none;
 }
