--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -90,7 +90,7 @@
     align-self: flex-start;
     width: 92%;
     font-size: 36px;
-    letter-spacing: 99%;
+    letter-spacing: -0.01em;
     line-height: 140%;
     padding-bottom: 140px;
     position: relative;
@@ -123,7 +123,7 @@
 
 .aboutFlexText {
     font-family: generalSansMedium;
-    letter-spacing: 98%;
+    letter-spacing: -0.02em;
     line-height: 140%;
     width: 300px;
     font-size: 14px;
